--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv-webpack": "^1.7.0",
     "mini-css-extract-plugin": "^0.7.0",
     "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
@@ -16,6 +17,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "express": "^4.17.1",
-    "rhizome-server": "^0.8.1"
+    "rhizome-server": "^0.8.1",
+    "vue": "^2.6.10"
   }
 }
