--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "devDependencies": {
     "dotenv-webpack": "^1.7.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.32.2",
@@ -16,8 +18,10 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
     "express": "^4.17.1",
     "rhizome-server": "^0.8.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-style-loader": "^4.1.2"
   }
 }
