--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
+    "osc": "^2.3.1",
     "rhizome-server": "^0.8.1",
     "vue": "^2.6.10",
     "vue-style-loader": "^4.1.2"
