--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
+    "lodash": "4.17.13",
+    "lodash.template": "^4.5.0",
     "osc": "^2.3.1",
     "rhizome-server": "^0.8.1",
     "vue": "^2.6.10",
