--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
-    "lodash": "4.17.13",
+    "lodash": "^4.17.13",
     "lodash.template": "^4.5.0",
+    "minimatch": "^3.0.2",
     "osc": "^2.3.1",
     "rhizome-server": "^0.8.1",
     "vue": "^2.6.10",
-    "vue-style-loader": "^4.1.2"
+    "vue-style-loader": "^4.1.2",
+    "ws": "^3.3.1"
   }
 }
